bk_ida/gccida/c2/build_array_ref
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_array_ref/src/c-typeck.c:1757:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_array_ref/src/c-typeck.c:1761:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_array_ref/src/c-typeck.c:1768:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_array_ref/src/c-typeck.c:1878:26: error: expected expression
if ( v23 != ( tree_node *)global_trees ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_array_ref/src/c-typeck.c:1878:15: error: use of undeclared identifier 'tree_node'
if ( v23 != ( tree_node *)global_trees ) 
              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_array_ref/src/obj/c-typeck.o] Error 1
